src/query/snapshots/tidx__query__parser__tests__cte_filtered_clickhouse_from_and_value.snap
---
source: src/query/parser.rs
assertion_line: 1768
expression: sig.to_cte_sql_clickhouse_filtered(Some(&used_cols))
---
Transfer AS (
    SELECT block_num, block_timestamp, log_idx, tx_idx, 
           concat('0x', lower(substring(tx_hash, 3))) AS tx_hash,
           concat('0x', lower(substring(address, 3))) AS address, selector, topic1, topic2, topic3, data, abi_address(topic1) AS "from", abi_uint(abi_word(data, 0)) AS "value"
    FROM logs
    WHERE selector = '0xddf252ad1be2c89b69c2b068fc378daa952ba7f163c4a11628f55a4df523b3ef'
)
