src/query/snapshots/tidx__query__parser__tests__rewrite_filters_in_list.snap
---
source: src/query/parser.rs
assertion_line: 1896
expression: sig.rewrite_filters_for_pushdown(sql)
---
SELECT * FROM OrderPlaced WHERE topic1 IN ('0x00000000000000000000000000000000000000000000000000000000010ad0bd', '0x00000000000000000000000000000000000000000000000000000000010ad0be', '0x00000000000000000000000000000000000000000000000000000000010ad0bf')
